--- a/sass/pages/_accueil.scss
+++ b/sass/pages/_accueil.scss
@@ -14,6 +14,14 @@
                 box-shadow: inset 0px 5px 5px 0px rgba(0, 0, 0, 0.1);
             }
 
+            @include tablette {
+                background-color: $couleur-gris;
+                font-size: 20px;
+                box-shadow: inset 0px 5px 5px 0px rgba(0, 0, 0, 0.1);
+                width: 100%;
+                margin-bottom: 20px;
+            }
+
             & p {
                 font-weight: $bold;
             }
@@ -36,6 +44,10 @@
             @include mobile {
                 width: auto;
                 border-radius: 0;
+            }
+
+            @include tablette {
+                width: 80%;
             }
 
             & h1 {
@@ -62,6 +74,10 @@
             font-weight: $bold;
 
             @include mobile {
+                margin: $margin-titre;
+            }
+
+            @include tablette {
                 margin: $margin-titre;
             }
         }
@@ -91,6 +107,10 @@
                 justify-content: start;
                 width: 85%;
                 height: 70px;
+            }
+
+            @include tablette {
+                width: 30%;
             }
 
             & p {
@@ -140,6 +160,10 @@
         margin: 60px 0 30px 100px;
         font-weight: $bold;
         @include mobile {
+            margin: $margin-titre;
+        }
+
+        @include tablette {
             margin: $margin-titre;
         }
     }
