--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -4,6 +4,12 @@
     }
 }
 
+@mixin tablette {
+    @media screen and (min-width: 768px) and (max-width: 992px) {
+        @content;
+    }
+}
+
 @mixin section {
     display: flex;
     flex-direction: column;
